css/main.css
main, label {
  font-family: "Open Sans", sans-serif;
  color: #fff;
}

.blue-box {
  background-color: #003fff;
}

h1, li, a, button {
  font-family: Quicksand, sans-serif;
  color: #fff;
}

nav li a:hover {
  background-color: #a42f15;
}

.btn {
  background-color: #e34a29;
  border-style: none;
  border-radius: 15px;
}

.btn:hover {
  background-color: #a42f15;
}

a {
  text-decoration: none;
}

fieldset legend {
  color: #fff;
}

.chewy {
  background-image: url("../images/chewy.jpg");
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 80vh;
  background-repeat: no-repeat;
  position: relative;
}

.solo {
  background-image: url("../images/solo.jpg");
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 80vh;
  background-repeat: no-repeat;
  position: relative;
}

.spooky {
  background-image: url("../images/spooky.jpg");
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 80vh;
  background-repeat: no-repeat;
  position: relative;
}

.alfred {
  background-image: url("../images/alfred.jpg");
  background-position: center;
  background-size: cover;
  width: 100vw;
  height: 80vh;
  background-repeat: no-repeat;
  position: relative;
}

.chewy-btn {
  position: absolute;
  top: 80%;
  left: 10%;
}

footer {
  color: #fff;
}

@media only screen and (min-width: 20em) {

  .chewy {
    background-image: url("../images/chewy.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .solo {
    background-image: url("../images/solo.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .spooky {
    background-image: url("../images/spooky.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .alfred {
    background-image: url("../images/alfred.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .nav-box {
    position: relative;
    top: 0;
  }

  .nav {
    display: none;
    right: 0;
    top: 100%;
    background-color: rgba(15, 64, 172, .75);
    width: 100%;
  }

  .nav li:hover {
    background-color: #e34a29;
  }

  .nav-check {
    position: absolute;
    top: -3em;
  }

  .nav-check:checked ~ .nav {
    display: block;
  }

  .nav-label {
    cursor: pointer;
    width: 35px;
    display: inline-block;
    position: absolute;
    right: 2em;
    top: 1.6em;
  }

  .nav-label img {
    display: block;
    width: 100%;
  }

  .nav-check:checked ~ .nav-label {
    background-color: #0029a7;
    padding: 3px;
    border-radius: 3px;
  }

  .name {
    width: 11em;
  }

  .chewy-btn {
    position: absolute;
    top: 80%;
    left: 10%;
  }

}

@media only screen and (min-width: 25em) {

  .chewy {
    background-image: url("../images/chewy.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .solo {
    background-image: url("../images/solo.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .spooky {
    background-image: url("../images/spooky.jpg");
    background-position: right;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .alfred {
    background-image: url("../images/alfred.jpg");
    background-position: center;
    background-size: cover;
    width: 100vw;
    height: 50vh;
    background-repeat: no-repeat;
  }

  .nav-box {
    position: relative;
    top: 0;
  }

  .nav {
    display: none;
    right: 0;
    top: 100%;
    background-color: rgba(15, 64, 172, .75);
    width: 100%;
  }

  .nav li:hover {
    background-color: #e34a29;
  }

  .nav-check {
    position: absolute;
    top: -3em;
  }

  .nav-check:checked ~ .nav {
    display: block;
  }

  .nav-label {
    cursor: pointer;
    width: 40px;
    display: inline-block;
    position: absolute;
    right: 2em;
    top: 1.6em;
  }

  .nav-label img {
    display: block;
    width: 100%;
  }

  .nav-check:checked ~ .nav-label {
    background-color: #0029a7;
    padding: 3px;
    border-radius: 3px;
  }

  .name {
    width: 11em;
  }

}

@media only screen and (min-width: 38em) {

  .nav-label {
    display: none;
  }

  .nav-label img {
    display: none;
  }

  .nav {
    display: block;
    background-color: rgba(15, 64, 172, .75);
    width: 100%;
    text-align: center;
    padding: .5em;
  }

  .nav li {
    display: inline;
  }

  .chewy-btn {
    position: absolute;
    top: 80%;
    left: 10%;
  }

}

@media only screen and (min-width: 60em) {

  .chewy {
    background-image: url("../images/chewy.jpg");
    background-position: center;
    background-size: cover;
    width: 70vw;
    height: 125vh;
    background-repeat: no-repeat;
  }

  .nav {
    display: inline;
    position: absolute;
    left: 25em;
    top: 1em;
    background-color: transparent;
  }

  .blue-box {
    position: relative;
  }

  ul {
    display: none;
  }

  section {
    position: absolute;
    right: -12em;
    top: 13em;
  }

  .chewy-btn {
    position: absolute;
    top: 90%;
    left: 39%;
  }

}

@media only screen and (min-width: 60em) {

  .chewy {
    background-image: url("../images/chewy.jpg");
    background-position: center;
    background-size: cover;
    width: 60vw;
    height: 125vh;
    background-repeat: no-repeat;
  }

  .nav {
    position: absolute;
    left: 55em;
    top: 1em;
    background-color: transparent;
  }

}

